--- a/templates/staff.html
+++ b/templates/staff.html
@@ -1,39 +1,135 @@
 {% extends 'base.html' %}
+{% load  custom_tags %}
 
 {% block content %}
 
-    <div class="container">
-	<div class="row">
-		<h2>School staffs</h2>
+    <div class="page-wrapper" style="display: block;">
+        <div class="page-breadcrumb">
+                <div class="col-5 align-self-center">
+                    <h4 class="page-title">School staffs</h4>
+                </div>
+        </div>
+
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col col-md-12">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="d-flex no-block align-items-center m-b-30">
+                                    <h4 class="card-title">All Staffs</h4>
+                                    <div class="ml-auto">
+                                        <div class="btn-group">
+                                            <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#createmodel">
+                                                Create New Staff
+                                            </button>
+                                        </div>
+                                    </div>
+                            </div>
+                            <div class="table-responsive">
+                                    <table class="table table-striped table-bordered">
+                                            <thead>
+                                                  <tr>
+                                                    <th>Firstname</th>
+                                                    <th>Lastname</th>
+                                                    <th>Email</th>
+                                                    <th>Phone number</th>
+                                                    <th>Is super staff?</th>
+{#                                                    <th></th>#}
+                                                  </tr>
+                                                </thead>
+                                                <tbody>
+                                                  {% for staff in school.school_staffs.all %}
+                                                        <tr>
+                                                            <td>{{ staff.first_name }}</td>
+                                                            <td>{{ staff.last_name }}</td>
+                                                            <td>{{ staff.email }}</td>
+                                                            <td>{{ staff.phone_number }}</td>
+                                                            <td>{{ staff.is_super_staff }}</td>
+{#                                                            <td>#}
+{#                                                                <a href="/account/staff/{{ staff.id }}/edit/">Edit</a>#}
+{#                                                            </td>#}
+                                                        </tr>
+                                                    {% endfor %}
+                                                </tbody>
+                                    </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
 
 
-    <form method="post">{% csrf_token %}
-    {{ form.as_p }}
-        <input type="submit" class="btn btn-primary" value="Create staff">
-    </form>
 
-<table class="table table-bordered">
-    <thead>
-      <tr>
-        <th>Firstname</th>
-        <th>Lastname</th>
-        <th>Email</th>
-        <th>Phone number</th>
-        <th>Is super staff?</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for staff in school.school_staffs.all %}
-            <tr>
-                <td>{{ staff.first_name }}</td>
-                <td>{{ staff.last_name }}</td>
-                <td>{{ staff.email }}</td>
-                <td>{{ staff.phone_number }}</td>
-                <td>{{ staff.is_super_staff }}</td>
-            </tr>
-        {% endfor %}
-    </tbody>
-  </table>
-	</div>
+    <div class="modal fade" id="createmodel" tabindex="-1" role="dialog" aria-labelledby="createModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <form method="post">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="createModalLabel"></i> Create New Staff</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <form method="post">{% csrf_token %}
+                                <div class="modal-body">
+                                    {{ form.as_p }}
+                                    {% if request.user|has_group:"School" %}
+                                        <p class="staff-chk"><label for="id_is_super_staff">Is super staff:</label> <input type="checkbox" name="is_super_staff" id="id_is_super_staff"></p>
+                                    {% endif %}
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                    <button type="submit" class="btn btn-dark"><i class="ti-save"></i> Save</button>
+                                </div>
+                            </form>
+                        </form>
+                    </div>
+                </div>
+    </div>
+
+
+{#    <div class="container">#}
+{#	<div class="row">#}
+{#		<h2>School staffs</h2>#}
+{##}
+{##}
+{#    <form method="post">{% csrf_token %}#}
+{#    {{ form.as_p }}#}
+{#        {% if request.user|has_group:"School" %}#}
+{#            <p class="staff-chk"><label for="id_is_super_staff">Is super staff:</label> <input type="checkbox" name="is_super_staff" id="id_is_super_staff"></p>#}
+{#        {% endif %}#}
+{#        <input type="submit" class="btn btn-primary" value="Create staff">#}
+{#    </form>#}
+{##}
+{#<table class="table table-bordered">#}
+{#    <thead>#}
+{#      <tr>#}
+{#        <th>Firstname</th>#}
+{#        <th>Lastname</th>#}
+{#        <th>Email</th>#}
+{#        <th>Phone number</th>#}
+{#        <th>Is super staff?</th>#}
+{#        <th></th>#}
+{#      </tr>#}
+{#    </thead>#}
+{#    <tbody>#}
+{#      {% for staff in school.school_staffs.all %}#}
+{#            <tr>#}
+{#                <td>{{ staff.first_name }}</td>#}
+{#                <td>{{ staff.last_name }}</td>#}
+{#                <td>{{ staff.email }}</td>#}
+{#                <td>{{ staff.phone_number }}</td>#}
+{#                <td>{{ staff.is_super_staff }}</td>#}
+{#                <td>#}
+{#                    <a href="/account/staff/{{ staff.id }}/edit/">Edit</a>#}
+{#                </td>#}
+{#            </tr>#}
+{#        {% endfor %}#}
+{#    </tbody>#}
+{#  </table>#}
+{#	</div>#}
 
 {% endblock content %}
